--- a/views/index.ejs
+++ b/views/index.ejs
@@ -168,12 +168,11 @@
                             <div class="col-md-3 col-sm-6 col-xs-12">
                                 <div class="sin-product">
                                     <div class="pro-image fix">
-                                        <a href="/sanphamdaugia?sanpham=<%=item.productID%>" class="image">
+                                        <a href="/sanphamdaugia?sanpham=<%=item.productID%>&owner=<%=item.ownerName%>&ownerid=<%=item.id%>" class="image">
                                             <img src="img/product/2.jpg" alt="">
                                         </a>
                                         <div class="pro-action">
-                                            <a href="/sanphamdaugia?sanpham=<%=item.productID%>"
-                                                class="action-btn wishlist"><i class="zmdi zmdi-mouse"></i></a>
+                                            <a href="/sanphamdaugia?sanpham=<%=item.productID%>&owner=<%=item.ownerName%>&ownerid=<%=item.id%>"class="action-btn wishlist"><i class="zmdi zmdi-mouse"></i></a>
                                         </div>
                                     </div>
                                     <div class="pro-details text-center">
@@ -292,7 +291,7 @@
                                             </p>
                                         </div>
                                         <div style="color:red;">
-                                            <a href="/sanphamdaugia?sanpham=<%=item.productID%>"
+                                            <a href="/sanphamdaugia?sanpham=<%=item.productID%>&owner=<%=item.ownerName%>&ownerid=<%=item.id%>"
                                                 class="pro-title"><%= item.productName %></a>
                                             <i class="zmdi zmdi-chart"></i><span>&nbsp;Đang đấu giá</span>
                                         </div>
@@ -316,7 +315,7 @@
                                         <img src="img/product/1.jpg" alt="" />
                                     </a>
                                     <div class="pro-action">
-                                        <a href="/sanphamdaugia?sanpham=<%=item.productID%>"
+                                        <a href="/sanphamdaugia?sanpham=<%=item.productID%>&owner=<%=item.ownerName%>&ownerid=<%=item.id%>"
                                             class="action-btn wishlist"><i class="zmdi zmdi-mouse"></i></a>
                                     </div>
                                 </div>
@@ -324,7 +323,7 @@
                                     <% if((date.getTime() - nowdate.getTime()) > 0){ %>
                                     <div class="top fix">
                                         <div style="color:green;">
-                                            <a href="/sanphamdaugia?sanpham=<%=item.productID%>"
+                                            <a href="/sanphamdaugia?sanpham=<%=item.productID%>&owner=<%=item.ownerName%>&ownerid=<%=item.id%>"
                                                 class="pro-title"><%= item.productName %></a>
                                             <i class="zmdi zmdi-chart"></i><span>&nbsp;Sắp đấu giá</span>
                                         </div>
@@ -432,13 +431,12 @@
                                     <% }else { %>
                                     <div class="top fix">
                                         <div style="color:red;">
-                                            <a href="/sanphamdaugia?sanpham=<%=item.productID%>"
+                                            <a href="/sanphamdaugia?sanpham=<%=item.productID%>&owner=<%=item.ownerName%>&ownerid=<%=item.id%>"
                                                 class="pro-title"><%= item.productName %></a>
                                             <i class="zmdi zmdi-chart"></i><span>&nbsp;Đang đấu giá</span>
                                         </div>
                                         <p class="pro-ratting float-right">
-                                            <span class="timer"
-                                                data-seconds-left="<%= item.auction.timeRun - ((nowdate.getTime() - date.getTime())/1000) %>">Còn&nbsp;</span>
+                                            <span class="timer" data-seconds-left="<%= item.auction.timeRun - ((nowdate.getTime() - date.getTime())/1000) %>">Còn&nbsp;</span>
                                         </p>
                                     </div>
                                     <div class="list-pro-dec">
