--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,11 @@
 span.timer {
     display: inline-flex;
 }
+
+span.timer1 {
+    background: black;
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
+    padding: 5px 10px;
+}
