--- a/views/auction-page.ejs
+++ b/views/auction-page.ejs
@@ -8,7 +8,6 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--SOCKETIO for Sign up-->
-
     <!-- jQuery JS -->
     <script src="js/vendor/jquery-1.12.0.min.js"></script>
     <script src="socket.io/socket.io.js"></script>
@@ -19,29 +18,35 @@
 
             $("#btnActionAuction").click(function () {
                 var re = /^[0-9]+(\.[0-9]{1,2})?$/;
-                var price = $("#priceAuctionbyUser").val();
+                var priceHT = $("#priceNow").text();
+                var priceDR = $("#priceAuctionbyUser").val();
                 var ownerID = $("#clientOwnerID").val();
                 var ownerName = $("#clientOwnerName").val();
                 var productID = $("#clientProductID").val();
-                if (!re.test(price)) {
+                if (!re.test(priceDR)) {
                     $('#error_AuctionPrice').text('Định dạng tiền không đúng!');
                 } else {
-                    $('#error_AuctionPrice').text('');
-                    socket.emit("Client_sent_data_BID",productID, price, ownerID, ownerName);
-                    socket.on("Server_sent_data_BID", function (userName,price) {
-                        $("#listUserJoin").append("<li style='float: left; margin-right: 50px;'><i class='zmdi zmdi-account-circle'></i>&nbsp<span>"+ userName +" vừa chốt giá " + price + "</span></li>");
-                    });
+                    if (Number(priceDR) > Number(priceHT) + 999) {
+                        $('#error_AuctionPrice').text('');
+                        socket.emit("Client_sent_data_BID", productID, priceDR, ownerID, ownerName, $("#clientUserID").val(), new Date());
+                    } else {
+                        $('#error_AuctionPrice').text('Giá đưa ra phải lớn hơn giá hiện tại 1000!');
+                    }
                 }
             });
+        });
+        socket.on("Server_sent_data_BID", function (clientUserID, price, dateTime) {
+            var current_datetime = new Date(dateTime);
+            let formatted_date = current_datetime.getFullYear() + "-" + (current_datetime.getMonth() + 1) + "-" + current_datetime.getDate() + " " + current_datetime.getHours() + ":" + current_datetime.getMinutes() + ":" + current_datetime.getSeconds();
+            $("#listUserJoin").append("<li><i class='zmdi zmdi-account-circle'></i>&nbsp<span>UserID: " + clientUserID + " - chốt giá " + price + " <i style='font-weight: 100;''>- tại " + formatted_date + "</i></span></li>");
+            $("#priceNow").html(price);
+            $("#userLast").html(clientUserID);
         });
     </script>
     <!--Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
-        rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
     <!-- CSS -->
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -54,9 +59,7 @@
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="css/responsive.css">
     <link href="css/color/color-1.css" rel="stylesheet">
-
     <link rel="stylesheet" href="css/style.css">
-
     <!-- Modernizer JS-->
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
@@ -78,7 +81,6 @@
     </div>
     <!-- Body main wrapper start -->
     <div class="wrapper bg-white fix">
-
         <!-- Header 1-->
         <div class="header-area sticky header-area-1  clearfix">
             <!-- Header Left 1 -->
@@ -87,8 +89,7 @@
                     <img src="img/logo.png" alt="logo" />
                 </a>
             </div>
-            <!-- Menu Wrapper 1 -->
-            <% include element/headerC %>
+            <!-- Menu Wrapper 1 --> <% include element/headerC %>
             <!-- Header Right 1 -->
             <div class="header-right header-right-1 float-right">
                 <!-- Account Menu -->
@@ -181,102 +182,79 @@
         </div>
         <!-- Home Slider -->
         <div class="single-product-area pb-90 pt-90">
-            <div class="container">
-                <% var date = new Date(_uG.auction.startDate); %>
-                <% var nowdate = new Date(); %>
-                <% if((nowdate.getTime() - date.getTime()) > 0){ %>
-                <div class="row">
+            <div class="container"> <% var date = new Date(_uG.auction.startDate); %> <% var nowdate = new Date(); %> <% if((nowdate.getTime() - date.getTime()) > 0){ %> <div class="row">
                     <div class="col-xs-12">
                         <div class="single-product-wrap border">
                             <div class="single-product-image">
                                 <div class="product-big-image tab-content">
                                     <div class="tab-pane active" id="pro-img-1">
                                         <img src="img/product/1.jpg" alt="" />
-                                        <a class="pro-img-popup" href="img/product/1.jpg"><i
-                                                class="zmdi zmdi-search"></i></a>
+                                        <a class="pro-img-popup" href="img/product/1.jpg"><i class="zmdi zmdi-search"></i></a>
                                     </div>
-                                    <h4><strong><%= _uG.productName %></strong></h4>
-                                    <h5><strong>Sở hữu: <p style="text-transform: uppercase;"><i><%= _uG.owner %></i>
-                                            </p></strong></h5>
-                                            <h5>User bạn đang login: <%= _uG.nameUser %></h5>
-                                    <input type="hidden" id="clientOwnerID" value="<%= _uG.id %>">
-                                    <input type="hidden" id="clientOwnerName" value="<%= _uG.owner %>">
-                                    <input type="hidden" id="clientProductID" value="<%= _uG.productID %>">
+                                    <div style="padding: 10px;">
+                                        <h4><strong><%= _uG.productName %></strong></h4>
+                                        <h5><strong>Sở hữu: <p style="text-transform: uppercase;"><i><%= _uG.owner %></i></p></strong></h5>
+                                        <p><%= _uG.productDescribe %></p>
+                                        <input type="hidden" id="clientOwnerID" value="<%= _uG.id %>">
+                                        <input type="hidden" id="clientOwnerName" value="<%= _uG.owner %>">
+                                        <input type="hidden" id="clientProductID" value="<%= _uG.productID %>">
+                                        <input type="hidden" id="clientUserID" value="<%= _uG.userID %>">
+                                    </div>
                                 </div>
                             </div>
                             <div class="single-product-content fix">
                                 <h3 class="single-pro-title"><%= _uG.auction.auctionName %></h3>
                                 <div class="single-product-price-ratting fix">
-                                    <p class="pro-ratting float-left"><span class="timer timer1"
-                                            data-seconds-left="<%= _uG.auction.timeRun - ((nowdate.getTime() - date.getTime())/1000) %>">Còn&nbsp;</span>
+                                    <p class="pro-ratting float-left"><span class="timer timer1" data-seconds-left="<%= _uG.auction.timeRun - ((nowdate.getTime() - date.getTime())/1000) %>">Còn&nbsp;</span>
                                     </p>
                                 </div>
                                 <div class="single-product-price-ratting fix">
                                     <p style="font-weight: bold;">Giá hiện tại:</p>
                                     <h3 class="single-pro-price float-left">
-                                        <p class="new" style="color: red;"><%= _uG.auction.startPrice %></p>
+                                        <p class="new" style="color: red;" id="priceNow"><% if(_uG.auction.bids.length ==0){ %> Chưa có <% }else{ %> <%= _uG.auction.bids[_uG.auction.bids.length - 1].amount %> <% } %></p>
                                     </h3>
                                 </div>
                                 <div class="single-product-price-ratting fix">
-                                    <p style="margin-bottom: 0px;">Giá trước đó:</p>
-                                    <h3 class="single-pro-price float-left">
-                                        <p class="old">00.000 VNĐ</p>
-                                    </h3>
-                                </div>
-                                <div class="single-product-price-ratting fix">
-                                    <p style="margin: 0px; font-style: italic; margin-top: 10px;">User đang giữ giá cao
-                                        nhất:</p>
+                                    <p style="margin: 0px; font-style: italic; margin-top: 10px;">User đang giữ giá cao nhất:</p>
                                     <h3 class="single-pro-price float-left" style="color: #ff9900;">
                                         <span><i class="zmdi zmdi-star" style="font-size: 20px;">&nbsp</i></span><span>
-                                            <p style="font-weight: bold; font-size: 14px;">Chưa có</p>
+                                            <p style="font-weight: bold; font-size: 14px;" id="userLast"> <% if(_uG.auction.bids.length ==0){ %> Chưa có <% }else{ %> <%= _uG.auction.bids[_uG.auction.bids.length - 1].user %> <% } %> </p>
                                         </span>
                                     </h3>
                                 </div>
-                                <p><%= _uG.productDescribe %></p>
-                                <div class="single-pro-size-1">
-                                    <h5>Tăng hơn so với giá hiện tại (nghìn)</h5>
+                                <div class="single-pro-size-1 mt-15">
+                                    <h5>Đưa ra giá (VNĐ)</h5>
                                     <br>
                                     <div class="pro-qty float-left">
-                                        <input value="0" name="qtybutton" class="cart-plus-minus-box" type="text"
-                                            id="priceAuctionbyUser">
+                                        <input value="0" name="qtybutton" class="cart-plus-minus-box" type="text" id="priceAuctionbyUser">
                                     </div>
                                 </div>
-                                <label id="error_AuctionPrice"
-                                    style="text-transform: inherit;font-style: italic;color: red;font-size: 13px;font-weight: 400;"></label>
+                                <label id="error_AuctionPrice" style="text-transform: inherit;font-style: italic;color: red;font-size: 13px;font-weight: 400;"></label>
                                 <div class="single-product-action-quantity fix">
                                     <div class="pro-details-action float-left">
-                                        <button class="pro-details-act-btn btn-text active" id="btnActionAuction"><i
-                                                class="zmdi zmdi-case"></i>Đấu giá</button>
+                                        <button class="pro-details-act-btn btn-text active" id="btnActionAuction"><i class="zmdi zmdi-case"></i>Đấu giá</button>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-12 mt-40">
+                        <div class="col-xs-12 mt-15" style="padding: 15px 0px;">
                             <div class="pro-details-tab-container fix">
                                 <ul class="pro-details-tablist fix">
                                     <li class="active">
-                                        <a href="#description" data-toggle="tab">Đang tham gia</a>
+                                        <a style="text-transform: capitalize;">Lịch sử đấu giá</a>
                                     </li>
                                 </ul>
                                 <div class="tab-content fix">
                                     <!-- Product Info Tab -->
                                     <div id="description" class="pro-details-tab pro-dsc-tab tab-pane active">
                                         <ul style="font-weight: bold; line-height: 40px;" id="listUserJoin">
-                                            <!--LIST BIDS-->
-                                            <% _uG.auction.bids.forEach(item => { %>
-                                                <li style='float: left; margin-right: 50px;'><i class='zmdi zmdi-account-circle'></i>&nbsp<span>UserID: <%= item.user %> - chốt giá <%= item.amount %></span></li>
-                                            <% }) %>
-                                        </ul>
+                                            <!--LIST BIDS--> <% _uG.auction.bids.forEach(item => { %> <% var current_datetime = new Date(item.timeStamp); %> <% let formatted_date = current_datetime.getFullYear() + "-" + (current_datetime.getMonth() + 1) + "-" + current_datetime.getDate() + " " + current_datetime.getHours() + ":" + current_datetime.getMinutes() + ":" + current_datetime.getSeconds() %> <li><i class='zmdi zmdi-account-circle'></i>&nbsp<span>UserID: <%= item.user %> - chốt giá <%= item.amount %> <i style="font-weight: 100;">- tại <%= formatted_date %></i></span></li> <% }) %> </ul>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <% }else{ %>
-                <h3><strong style="color: red;">Sản phẩm chưa được khởi động đấu giá, cùng chờ nhé!</strong></h3>
-                <% } %>
-            </div>
+                </div> <% }else{ %> <h3><strong style="color: red;">Sản phẩm chưa được khởi động đấu giá, cùng chờ nhé!</strong></h3> <% } %> </div>
         </div>
         <!-- Bootstrap JS -->
         <script src="js/bootstrap.min.js"></script>
