--- a/views/auction-page.ejs
+++ b/views/auction-page.ejs
@@ -205,13 +205,13 @@
                             <div class="single-product-content fix">
                                 <h3 class="single-pro-title"><%= _uG.auction.auctionName %></h3>
                                 <div class="single-product-price-ratting fix">
-                                    <p class="pro-ratting float-left"><span class="timer timer1" data-seconds-left="<%= _uG.auction.timeRun - ((nowdate.getTime() - date.getTime())/1000) %>">Còn&nbsp;</span>
+                                    <p class="pro-ratting float-left"><span class="timer1" data-seconds-left="<%= _uG.auction.timeRun - ((nowdate.getTime() - date.getTime())/1000) %>">Còn&nbsp;</span>
                                     </p>
                                 </div>
                                 <div class="single-product-price-ratting fix">
                                     <p style="font-weight: bold;">Giá hiện tại:</p>
                                     <h3 class="single-pro-price float-left">
-                                        <p class="new" style="color: red;" id="priceNow"><% if(_uG.auction.bids.length ==0){ %> Chưa có <% }else{ %> <%= _uG.auction.bids[_uG.auction.bids.length - 1].amount %> <% } %></p>
+                                        <p class="new" style="color: red;" id="priceNow"><%= _uG.auction.startPrice %></p>
                                     </h3>
                                 </div>
                                 <div class="single-product-price-ratting fix">
