--- a/views/quanlyloaisanpham.ejs
+++ b/views/quanlyloaisanpham.ejs
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--SOCKETIO for Sign up-->
     <script src="socket.io/socket.io.js"></script>
-    <script> var socket = io('http://localhost:3000'); </script>
+    <script> var socket = io('http://54.175.16.232:3000'); </script>
     <script>
         function checkCategory() {
             var name = checkBusinessName(document.getElementById('categoryName').value);
