--- a/views/auction-page.ejs
+++ b/views/auction-page.ejs
@@ -11,7 +11,7 @@
     <!-- jQuery JS -->
     <script src="js/vendor/jquery-1.12.0.min.js"></script>
     <script src="socket.io/socket.io.js"></script>
-    <script> var socket = io('http://localhost:3000'); </script>
+    <script> var socket = io('http://54.175.16.232:3000'); </script>
     <script>
         $(document).ready(function () {
             socket.emit("JOIN_ROOM_AUCTION_CLIENT", $("#clientProductID").val());
