--- a/views/check-out.ejs
+++ b/views/check-out.ejs
@@ -50,7 +50,7 @@
                         <div class="billing-details">
                             <h4>Xác nhận thông tin giao dịch</h4>
                             <form action="/updateorder" method="POST" id="formUpdateOrder">
-                                <input type="hidden" name="productID" value="<%= _uG.productID %></h3>">
+                                <input type="hidden" name="productID" value="<%= _uG.productID %>">
                                 <label>Ghi chú:</label>
                                 <textarea name="note"></textarea>
                             </form>
