--- a/views/element/headerC.ejs
+++ b/views/element/headerC.ejs
@@ -92,18 +92,8 @@
         <div class="account-menu account-menu-1 float-right">
             <button data-toggle="dropdown" class="acc-menu-toggle"><i class="zmdi zmdi-settings"></i></button>
             <ul class="acc-menu-dropdown dropdown-menu right">
-                <li>
-                    <a href="#">Thông tin cá nhân</a>
-                </li>
-                <li>
-                    <a href="#">Lịch sử đấu giá</a>
-                </li>
-                <li>
-                    <a href="#">Xem chi tiết hoá đơn</a>
-                </li>
-                <li>
-                    <a href="/logout">Đăng xuất</a>
-                </li>
+                <li><a>Xem lịch sử đấu giá</a></li>
+                <li><a href='/logout'>Đăng xuất</a></li>
             </ul>
         </div>
     </div>
