--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 
     <!--SOCKETIO for Sign up-->
     <script src="socket.io/socket.io.js"></script>
-    <script> var socket = io('http://54.175.16.232:3000'); </script>
+    <script> var socket = io('http://localhost:3000'); </script>
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
@@ -53,7 +53,177 @@
     <!-- Body main wrapper start -->
     <div class="wrapper bg-white fix">
         <!-- Header 1-->
-        <% include element/headerC %>
+        <div class="header-area sticky header-area-1  clearfix">
+            <!-- Header Left 1 -->
+            <div class="header-left header-left-1 float-left">
+                <a href="/" class="logo">
+                    <img src="img/logo.png" alt="logo" />
+                </a>
+            </div>
+            <!-- Menu Wrapper 1 -->
+            <div class="menu-wrapper menu-wrapper-1 hidden-sm hidden-xs text-center">
+                <div class="menu menu-1">
+                    <nav>
+                        <ul>
+                            <li class="active">
+                                <a href="/">TRANG CHỦ</a>
+                            </li>
+                            <li>
+                                <a>LOẠI</a>
+                                <div class="mega-menu">
+                                    <ul>
+                                        <li>
+                                            <a href="/">CÁC LOẠI</a>
+                                        </li>
+                                        <li>
+                                            <a href="/sanpham?loai=xeco&sapxep=&tinhtrang=all">Xe cộ</a>
+                                        </li>
+                                        <li>
+                                            <a href="/sanpham?loai=donoithat&sapxep=&tinhtrang=all">Đồ nội thất</a>
+                                        </li>
+                                        <li>
+                                            <a href="/sanpham?loai=dodienthu&sapxep=&tinhtrang=all">Đồ điện tử</a>
+                                        </li>
+                                        <li>
+                                            <a href="/sanpham?loai=thoitrang&sapxep=&tinhtrang=all">Thời trang</a>
+                                        </li>
+                                        <li>
+                                            <a href="/sanpham?loai=giay&sapxep=&tinhtrang=all">Giày</a>
+                                        </li>
+                                        <li>
+                                            <a href="/sanpham?loai=doco&sapxep=&tinhtrang=all">Đồ cổ</a>
+                                        </li>
+                                    </ul>
+                                    <ul>
+                                        <li>
+                                            <a href="#">TÌM THEO</a>
+                                        </li>
+                                        <li>
+                                            <a href="/sanpham?loai=&sapxep=ten&tinhtrang=all">Tên</a>
+                                        </li>
+                                        <li>
+                                            <a href="/sanpham?loai=doco&sapxep=thoigian&tinhtrang=all">Thời gian</a>
+                                        </li>
+                                    </ul>
+                                    <div class="menu-banner">
+                                        <a href="#">
+                                            <img src="img/menu-banner.jpg" alt="" />
+                                        </a>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <a>Tình trạng</a>
+                                <ul class="sub-menu">
+                                    <li>
+                                        <a href="/sanpham?loai=&sapxep=&tinhtrang=dangdaugia">Đang đấu giá</a>
+                                    </li>
+                                    <li>
+                                        <a href="/sanpham?loai=&sapxep=&tinhtrang=chuadaugia">Đã lên sàng</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a>Chính sách</a>
+                                <ul class="sub-menu">
+                                    <li>
+                                        <a href="#">Chính sách đấu giá</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Chính sách giao hàng</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/contact">Liên hệ</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <!-- Header Right 1 -->
+            <div class="header-right header-right-1 float-right">
+                <!-- Account Menu -->
+                <div class="account-menu account-menu-1 float-right">
+                    <button data-toggle="dropdown" class="acc-menu-toggle"><i class="zmdi zmdi-settings"></i></button>
+                    <% if(booleanB){ %>
+                    <ul class="acc-menu-dropdown dropdown-menu right">
+                        <li><form action="lichsudaugia" method="POST" id="FormLSDG"><input type="hidden" value="<%= userID %>"><a href="#" id="submitFormLSDG">Xem lịch sử đấu giá</a></form></li>
+                        <li><a href='/logout'>Đăng xuất</a></li>
+                    </ul>
+                    <% }else{ %>
+                    <ul class="acc-menu-dropdown dropdown-menu right">
+                        <li><a href='/login'>Đăng nhập</a></li>
+                    </ul>
+                    <% } %>
+                </div>
+            </div>
+            <!-- Mobile Menu Wrapper 1 -->
+            <div class="mobile-menu-wrapper mobile-menu-wrapper-1 hidden-md hidden-lg">
+                <div class="mobile-menu mobile-menu-1">
+                    <nav>
+                        <ul>
+                            <li class="active">
+                                <a href="index.html">TRANG CHỦ</a>
+                            </li>
+                            <li>
+                                <a>LOẠI</a>
+                                <ul>
+                                    <li>
+                                        <a href="/">CÁC LOẠI</a>
+                                        <ul>
+                                            <li>
+                                                <a href="/sanpham?loai=xeco&sapxep=&tinhtrang=all">Xe cộ</a>
+                                            </li>
+                                            <li>
+                                                <a href="/sanpham?loai=donoithat&sapxep=&tinhtrang=all">Đồ nội thất</a>
+                                            </li>
+                                            <li>
+                                                <a href="/sanpham?loai=dodienthu&sapxep=&tinhtrang=all">Đồ điện tử</a>
+                                            </li>
+                                            <li>
+                                                <a href="/sanpham?loai=thoitrang&sapxep=&tinhtrang=all">Thời trang</a>
+                                            </li>
+                                            <li>
+                                                <a href="/sanpham?loai=giay&sapxep=&tinhtrang=all">Giày</a>
+                                            </li>
+                                            <li>
+                                                <a href="/sanpham?loai=doco&sapxep=&tinhtrang=all">Đồ cổ</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a>Tìm theo</a>
+                                        <ul>
+                                            <li>
+                                                <a href="/sanpham?loai=&sapxep=ten&tinhtrang=all">Tên</a>
+                                            </li>
+                                            <li>
+                                                <a href="/sanpham?loai=doco&sapxep=thoigian&tinhtrang=all">Thời gian</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a>Chính sách</a>
+                                <ul>
+                                    <li>
+                                        <a href="#">Chính sách đấu giá</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Chính sách giao hàng</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/contact">Liện hệ</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
         <!-- Home Slider -->
         <div class="slider-area-1 top-header-space-1  pb-10">
             <div id="mainSlider-1" class="nivoSlider slider-image">
@@ -168,11 +338,13 @@
                             <div class="col-md-3 col-sm-6 col-xs-12">
                                 <div class="sin-product">
                                     <div class="pro-image fix">
-                                        <a href="/sanphamdaugia?sanpham=<%=item.productID%>&owner=<%=item.ownerName%>&ownerid=<%=item.id%>" class="image">
+                                        <a href="/sanphamdaugia?sanpham=<%=item.productID%>&owner=<%=item.ownerName%>&ownerid=<%=item.id%>"
+                                            class="image">
                                             <img src="img/product/2.jpg" alt="">
                                         </a>
                                         <div class="pro-action">
-                                            <a href="/sanphamdaugia?sanpham=<%=item.productID%>&owner=<%=item.ownerName%>&ownerid=<%=item.id%>"class="action-btn wishlist"><i class="zmdi zmdi-mouse"></i></a>
+                                            <a href="/sanphamdaugia?sanpham=<%=item.productID%>&owner=<%=item.ownerName%>&ownerid=<%=item.id%>"
+                                                class="action-btn wishlist"><i class="zmdi zmdi-mouse"></i></a>
                                         </div>
                                     </div>
                                     <div class="pro-details text-center">
@@ -436,7 +608,8 @@
                                             <i class="zmdi zmdi-chart"></i><span>&nbsp;Đang đấu giá</span>
                                         </div>
                                         <p class="pro-ratting float-right">
-                                            <span class="timer" data-seconds-left="<%= item.auction.timeRun - ((nowdate.getTime() - date.getTime())/1000) %>">Còn&nbsp;</span>
+                                            <span class="timer"
+                                                data-seconds-left="<%= item.auction.timeRun - ((nowdate.getTime() - date.getTime())/1000) %>">Còn&nbsp;</span>
                                         </p>
                                     </div>
                                     <div class="list-pro-dec">
@@ -539,6 +712,11 @@
     <!-- partial -->
     <script src='js/jquery-3.3.1.slim.min.js'></script>
     <script src="js/countdown.js"></script>
+    <script>
+        $("#submitFormLSDG").click(function (){
+            $("#FormLSDG").submit();
+        })
+    </script>
 </body>
 
 </html>
